js/js.translator/testData/incremental/invalidation/localInlineFunction/lib1/l1.1.kt
fun foo(): String {
    inline fun localFoo(): String {
        return "OK-1"
    }

    return localFoo()
}
